--- a/index.html
+++ b/index.html
@@ -2,7 +2,11 @@
 	<head> 
 	</head>
 	<body>
-		Body Stuff
 		<img src="images/selfportrait.png" />
+		"Self Portrait 1"
+		
 	</body>
+		<img src="images/portrait_take_two.png" />
+		"Selt Portrait 2"
+		
 </html>
