--- a/archive.html
+++ b/archive.html
@@ -1,12 +1,17 @@
 <html>
-	<head> 
+	<head>
+	
+		<h1> The Archive </h1>
+
 	</head>
 	<body>
+		
 		<img src="images/selfportrait.png" />
 		"Self Portrait 1"
-		
-	</body>
+		<div>
+		</div>
 		<img src="images/portrait_take_two.png" />
-		"Selt Portrait 2"
-		
+		"Self Portrait 2"
+
+	</body>
 </html>
