--- a/archive.html
+++ b/archive.html
@@ -1,7 +1,8 @@
 <html>
 	<head>
 	
-		<h1> The Archive </h1>
+		<title> The Archive </title>
+		<link rel="stylesheet" type="text/css" href="styles.css" />
 
 	</head>
 	<body>
