--- a/archive.html
+++ b/archive.html
@@ -9,7 +9,7 @@
 
 	<body>
 		<h1> "Selfie 1" </h1>
-		<img src="images/selfportrait.png" />
+		<img src="images/selfportrait.png" align="middle" />
 			<p> A self portrait completed on the first day of GD1 about how I was raised by my grandmother.</p>
 
 		<div>
