Changes in class
typekit changes in class

--- a/archive.html
+++ b/archive.html
@@ -8,8 +8,8 @@
 	</head>
 
 	<body>
-		<h1> "Selfie 1" </h1>
-		<img src="images/selfportrait.png" align="middle" />
+		<h1 class=".examplefont"> "Selfie 1" </h1>
+		<img src="images/selfportrait.png"/>
 			<p> A self portrait completed on the first day of GD1 about how I was raised by my grandmother.</p>
 
 		<div>
