--- a/archive.html
+++ b/archive.html
@@ -8,7 +8,7 @@
 	</head>
 
 	<body>
-		<h1 class=".examplefont"> "Selfie 1" </h1>
+		<h1 class=".example2"> "Selfie 1" </h1>
 		<img src="images/selfportrait.png"/>
 			<p> A self portrait completed on the first day of GD1 about how I was raised by my grandmother.</p>
 
