At Home Changes
Adding some homework stuff

--- a/archive.html
+++ b/archive.html
@@ -22,7 +22,24 @@
 		<div>
 		</div>
 
-		<h3> "The Pen is Mightier" </h3>
+		<h3> "It's The Thought That Counts" </h3>
+		<img src="images/businesscarddesign1.jpg" />
+		<div>
+		</div>
+		<img src="images/businesscarddesign2.jpg" />
+		<div>
+		</div>
+		<img src="images/businesscarddesign3.jpg" />
+		<div>
+		</div>
+		<img src="images/businesscarddesign4.jpg" />
+		<div>
+		</div>
+			<p> My gift is a business card design for my Father who has recently quit his job as a chef to become a HVAC maintenance man. He does not speak English that well so I made one of the sides of the business card in English and the other in Chinese. </p>
+		<div>
+		</div>
+
+		<h4> "The Pen is Mightier" </h4>
 			<p> Recently in my Intro to Web Design class we have been learning about what makes a good website. I have learned that although a website should be aesthetically pleasing, it should also be easy to navigate. That users of the website must be pleased with the design yet drawn to the content. </p>
 			<div>
 			</div>
@@ -34,6 +51,7 @@
 
 		<div>
 		</div>
+
 
 	</body>
 
