At Home Changes
Trying stuff out

--- a/archive.html
+++ b/archive.html
@@ -10,14 +10,14 @@
 	<body>
 		<h1 class=".example2"> "Selfie 1" </h1>
 		<img src="images/selfportrait.png"/>
-			<p> A self portrait completed on the first day of GD1 about how I was raised by my grandmother.</p>
+			<p1> A self portrait completed on the first day of GD1 about how I was raised by my grandmother.</p1>
 
 		<div>
 		</div>
 
 		<h2> "Selfie 2" </h2>
 		<img src="images/portrait_take_two.png" />
-			<p> A self portrait homework, a silhouette of a giraffe because I have a giraffe birthmark on my leg.</p>
+			<p2> A self portrait homework, a silhouette of a giraffe because I have a giraffe birthmark on my leg.</p2>
 
 		<div>
 		</div>
@@ -35,14 +35,14 @@
 		<img src="images/businesscarddesign4.jpg" />
 		<div>
 		</div>
-			<p> My gift is a business card design for my Father who has recently quit his job as a chef to become a HVAC maintenance man. He does not speak English that well so I made one of the sides of the business card in English and the other in Chinese. </p>
+			<p3> My gift is a business card design for my Father who has recently quit his job as a chef to become a HVAC maintenance man. He does not speak English that well so I made one of the sides of the business card in English and the other in Chinese. </p3>
 		<div>
 		</div>
 
 		<h4> "The Pen is Mightier" </h4>
-			<p> Recently in my Intro to Web Design class we have been learning about what makes a good website. I have learned that although a website should be aesthetically pleasing, it should also be easy to navigate. That users of the website must be pleased with the design yet drawn to the content. 
+			<p4> Recently in my Intro to Web Design class we have been learning about what makes a good website. I have learned that although a website should be aesthetically pleasing, it should also be easy to navigate. That users of the website must be pleased with the design yet drawn to the content. 
 				<br> My first impression of The New Yorker website is that it is very well organized and the layout is very effective. The links at the top are in white text on a black bar are the categories of each article while there are also links below the black bar on the grey bar in black text (less important links but still important enough to be at the top of the page). This helps the user navigate to a topic they are interested in. There is also a slide show in the middle of the page about the most recent articles from each category as well as a box to the right hand-side that shows the most popular, most emailed, this issue articles.
-				<br> The page is simple with a white background and black text. It is very easy to read with no distracting elements. I think that The New Yorker website is overall a good page with the direct information in the middle column and the advertisements on the right-hand column. </p>
+				<br> The page is simple with a white background and black text. It is very easy to read with no distracting elements. I think that The New Yorker website is overall a good page with the direct information in the middle column and the advertisements on the right-hand column. </p4>
 
 
 		<div>
