--- a/archive.html
+++ b/archive.html
@@ -9,7 +9,7 @@
 
 	<body>
 		<h1 class=".example2"> "Selfie 1" </h1>
-		<img src="images/selfportrait.png"/>
+		<img src="images/selfportrait.png" height="453" width="412"/>
 			<p1> A self portrait completed on the first day of GD1 about how I was raised by my grandmother.</p1>
 
 		<div>
