At Home Changes
More messing around

--- a/archive.html
+++ b/archive.html
@@ -23,16 +23,16 @@
 		</div>
 
 		<h3> "It's The Thought That Counts" </h3>
-		<img src="images/businesscarddesign1.jpg" />
+		<img src="images/businesscarddesign1.jpg" height="384" width="451"/>
 		<div>
 		</div>
-		<img src="images/businesscarddesign2.jpg" />
+		<img src="images/businesscarddesign2.jpg" height="384" width="451"/>
 		<div>
 		</div>
-		<img src="images/businesscarddesign3.jpg" />
+		<img src="images/businesscarddesign3.jpg" height="384" width="451"/>
 		<div>
 		</div>
-		<img src="images/businesscarddesign4.jpg" />
+		<img src="images/businesscarddesign4.jpg" height="384" width="451"/>
 		<div>
 		</div>
 			<p3> My gift is a business card design for my Father who has recently quit his job as a chef to become a HVAC maintenance man. He does not speak English that well so I made one of the sides of the business card in English and the other in Chinese. </p3>
