--- a/archive.html
+++ b/archive.html
@@ -2,13 +2,16 @@
 
 	<head>
 	
-		<title> The Archive </title>
+		<title> Graphic Design 1 - Archive </title>
 		<link rel="stylesheet" type="text/css" href="styles.css" />
 
 	</head>
 
 	<body>
-		<h1 class=".example2"> "Selfie 1" </h1>
+
+		<h1> Projects </h1>
+
+		<h2 class=".example2"> "Selfie 1" </h2>
 		<img src="images/selfportrait.png" height="453" width="412"/>
 			<p1> A self portrait completed on the first day of GD1 about how I was raised by my grandmother.</p1>
 
@@ -22,7 +25,7 @@
 		<div>
 		</div>
 
-		<h3> "It's The Thought That Counts" </h3>
+		<h2> "It's The Thought That Counts" </h2>
 		<img src="images/businesscarddesign1.jpg" height="415" width="451"/>
 		<div>
 		</div>
@@ -39,7 +42,7 @@
 		<div>
 		</div>
 
-		<h4> "The Pen is Mightier" </h4>
+		<h2> "The Pen is Mightier" </h2>
 			<p4> Recently in my Intro to Web Design class we have been learning about what makes a good website. I have learned that although a website should be aesthetically pleasing, it should also be easy to navigate. That users of the website must be pleased with the design yet drawn to the content. 
 				<br> My first impression of The New Yorker website is that it is very well organized and the layout is very effective. The links at the top are in white text on a black bar are the categories of each article while there are also links below the black bar on the grey bar in black text (less important links but still important enough to be at the top of the page). This helps the user navigate to a topic they are interested in. There is also a slide show in the middle of the page about the most recent articles from each category as well as a box to the right hand-side that shows the most popular, most emailed, this issue articles.
 				<br> The page is simple with a white background and black text. It is very easy to read with no distracting elements. I think that The New Yorker website is overall a good page with the direct information in the middle column and the advertisements on the right-hand column. </p4>
