at home changes
added a link in html and updated my description

--- a/archive.html
+++ b/archive.html
@@ -11,16 +11,16 @@
 
 		<h1> Projects </h1>
 
-		<h2 class=".example2"> "Selfie 1" </h2>
-		<img src="images/selfportrait.png" height="453" width="412"/>
-			<p1> A self portrait completed on the first day of GD1 about how I was raised by my grandmother.</p1>
+		<h2> "Selfies" </h2>
 
-		<div>
-		</div>
+			<ul>
 
-		<h2> "Selfie 2" </h2>
-		<img src="images/portrait_take_two.png" />
-			<p2> A self portrait homework, a silhouette of a giraffe because I have a giraffe birthmark on my leg.</p2>
+				<li><a href="selfie_project_link.html">Selfie 1 and 2</a></li>
+		
+			<p1> The first selfie was about how I was raised by my Grandmother instead of my parents. So a lot of my morals and the way I take life on, is similar to my Grandmother tackles life. That is why I overlapped my partially transparent baby photo with her partially trasnparent photo. <br>
+				The second selfie is about a birth mark I have on my leg. It is a faded brown colour and is the size of a pinky nail. It is a birth mark of a giraffe. So I did a sillhouette of a giraffe using giraffe patterns on Adobe Illustrator.</p1>
+
+		
 
 		<div>
 		</div>
