--- a/archive.html
+++ b/archive.html
@@ -16,6 +16,9 @@
 			<ul>
 
 				<li><a href="selfie_project_link.html">Selfie 1 and 2</a></li>
+			
+			</ul>
+
 		
 			<p1> The first selfie was about how I was raised by my Grandmother instead of my parents. So a lot of my morals and the way I take life on, is similar to my Grandmother tackles life. That is why I overlapped my partially transparent baby photo with her partially trasnparent photo. <br>
 				The second selfie is about a birth mark I have on my leg. It is a faded brown colour and is the size of a pinky nail. It is a birth mark of a giraffe. So I did a sillhouette of a giraffe using giraffe patterns on Adobe Illustrator.</p1>
@@ -24,18 +27,16 @@
 
 		<div>
 		</div>
+		
 
 		<h2> "It's The Thought That Counts" </h2>
-		<img src="images/businesscarddesign1.jpg" height="415" width="451"/>
-		<div>
-		</div>
-		<img src="images/businesscarddesign2.jpg" height="415" width="451"/>
-		<div>
-		</div>
-		<img src="images/businesscarddesign3.jpg" height="415" width="451"/>
-		<div>
-		</div>
-		<img src="images/businesscarddesign4.jpg" height="415" width="451"/>
+		
+			<ul>
+
+				<li><a href="thought_project_link.html">It's the Thought that Counts Images</a></li>
+			
+			</ul>
+
 		<div>
 		</div>
 			<p3> My gift is a business card design for my Father who has recently quit his job as a chef to become a HVAC maintenance man. He does not speak English that well so I made one of the sides of the business card in English and the other in Chinese. </p3>
@@ -43,9 +44,13 @@
 		</div>
 
 		<h2> "The Pen is Mightier" </h2>
-			<p4> Recently in my Intro to Web Design class we have been learning about what makes a good website. I have learned that although a website should be aesthetically pleasing, it should also be easy to navigate. That users of the website must be pleased with the design yet drawn to the content. 
-				<br> My first impression of The New Yorker website is that it is very well organized and the layout is very effective. The links at the top are in white text on a black bar are the categories of each article while there are also links below the black bar on the grey bar in black text (less important links but still important enough to be at the top of the page). This helps the user navigate to a topic they are interested in. There is also a slide show in the middle of the page about the most recent articles from each category as well as a box to the right hand-side that shows the most popular, most emailed, this issue articles.
-				<br> The page is simple with a white background and black text. It is very easy to read with no distracting elements. I think that The New Yorker website is overall a good page with the direct information in the middle column and the advertisements on the right-hand column. </p4>
+
+		 	<ul>
+
+				<li><a href="pen_project_link.html">The Pen is Mightier Essay</a></li>
+			
+			</ul>
+			<p4> For this project, we reviewed and critiqued the website of the "New Yorker".  </p4>
 
 
 		<div>
