At Home Changes
Added New Porject

--- a/archive.html
+++ b/archive.html
@@ -50,7 +50,20 @@
 				<li><a href="pen_project_link.html">The Pen is Mightier Essay</a></li>
 			
 			</ul>
+
 			<p4> For this project, we reviewed and critiqued the website of the "New Yorker".  </p4>
+
+		<h2> "Become The Master" </h2>
+
+			<ul>
+
+				<li><a href="master_project_link.html">Become The Master Images</a></li>
+			
+			</ul>
+
+			<p5> For this project we were supposed to teach a skill to someone, I made an image teaching people how to tie a tie. </p5>
+
+
 
 
 		<div>
