--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
 			</ul>
 
 		
-			<p1> The first selfie was about how I was raised by my Grandmother instead of my parents. So a lot of my morals and the way I take life on, is similar to my Grandmother tackles life. That is why I overlapped my partially transparent baby photo with her partially trasnparent photo. <br>
-				The second selfie is about a birth mark I have on my leg. It is a faded brown colour and is the size of a pinky nail. It is a birth mark of a giraffe. So I did a sillhouette of a giraffe using giraffe patterns on Adobe Illustrator.</p1>
+			<p> The first selfie was about how I was raised by my Grandmother instead of my parents. So a lot of my morals and the way I take life on, is similar to my Grandmother tackles life. That is why I overlapped my partially transparent baby photo with her partially trasnparent photo. <br>
+				The second selfie is about a birth mark I have on my leg. It is a faded brown colour and is the size of a pinky nail. It is a birth mark of a giraffe. So I did a sillhouette of a giraffe using giraffe patterns on Adobe Illustrator.</p>
 
 		
 
@@ -39,7 +39,7 @@
 
 		<div>
 		</div>
-			<p3> My gift is a business card design for my Father who has recently quit his job as a chef to become a HVAC maintenance man. He does not speak English that well so I made one of the sides of the business card in English and the other in Chinese. </p3>
+			<p> My gift is a business card design for my Father who has recently quit his job as a chef to become a HVAC maintenance man. He does not speak English that well so I made one of the sides of the business card in English and the other in Chinese. </p>
 		<div>
 		</div>
 
@@ -51,7 +51,7 @@
 			
 			</ul>
 
-			<p4> For this project, we reviewed and critiqued the website of the "New Yorker".  </p4>
+			<p1> For this project, we reviewed and critiqued the website of the "New Yorker".  </p1>
 
 		<h2> "Become The Master" </h2>
 
@@ -61,7 +61,15 @@
 			
 			</ul>
 
-			<p5> For this project we were supposed to teach a skill to someone, I made an image teaching people how to tie a tie. </p5>
+			<p> For this project we were supposed to teach a skill to someone, I made an image teaching people how to tie a tie. </p>
+
+			<ul>
+
+				<li><a href="">Monograph Images</a></li>
+
+			<p> For my monograph project, I chose to research about yantra tattoos from Thailand because of my interest in tattoos. <br>
+				For the project, I made a small booklet which explained the history of yantra tattoos and also has yantra symbols. <br> There is also a box with henna tools so that readers could create their own yantra tattoos.
+			</p>
 
 
 
