--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 		<h1> Projects </h1>
 
-		<h2> "Selfies" </h2>
+		<h2> "Selfies: Anything But My Face" </h2>
 
 			<ul>
 
@@ -29,7 +29,7 @@
 		</div>
 		
 
-		<h2> "It's The Thought That Counts" </h2>
+		<h2> "It's The Thought That Counts: A Gift To Fit In Your Wallet" </h2>
 		
 			<ul>
 
@@ -43,7 +43,7 @@
 		<div>
 		</div>
 
-		<h2> "The Pen is Mightier" </h2>
+		<h2> "The Pen is Mightier: Critique Of The New Yorker" </h2>
 
 		 	<ul>
 
@@ -53,7 +53,7 @@
 
 			<p1> For this project, we reviewed and critiqued the website of the "New Yorker".  </p1>
 
-		<h2> "Become The Master" </h2>
+		<h2> "Become The Master: How To Tie A Tie" </h2>
 
 			<ul>
 
@@ -64,6 +64,8 @@
 			<p> For this project we were supposed to teach a skill to someone, I made an image teaching people how to tie a tie. </p>
 
 			<ul>
+
+				<h2> "Monograph: Yantra" </h2>
 
 				<li><a href="">Monograph Images</a></li>
 
