--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 			
 			</ul>
 
-			<p1> For this project, we reviewed and critiqued the website of the "New Yorker".  </p1>
+			<p> For this project, we reviewed and critiqued the website of the "New Yorker".  </p>
 
 		<h2> "Become The Master: How To Tie A Tie" </h2>
 
@@ -67,7 +67,7 @@
 
 				<h2> "Monograph: Yantra" </h2>
 
-				<li><a href="">Monograph Images</a></li>
+				<li><a href="yantra_pics.html">Monograph Images</a></li>
 
 			<p> For my monograph project, I chose to research about yantra tattoos from Thailand because of my interest in tattoos. <br>
 				For the project, I made a small booklet which explained the history of yantra tattoos and also has yantra symbols. <br> There is also a box with henna tools so that readers could create their own yantra tattoos.
