--- a/yantra_pics.html
+++ b/yantra_pics.html
@@ -11,19 +11,19 @@
 
 		<h1> Yantra </h1>
 
-			<img src="yantra_pics/yantra1.jpg"/>
+			<img src="yantra_pics/yantra1.jpg"width="500"height="694"/>
 			<br>
-			<img src="yantra_pics/yantra2.jpg"/>
+			<img src="yantra_pics/yantra2.jpg"width="500"height="667"/>
 			<br>
-			<img src="yantra_pics/yantra3.jpg"/>
+			<img src="yantra_pics/yantra3.jpg"width="500"height="667"/>
 			<br>
-			<img src="yantra_pics/yantra4.jpg"/>
+			<img src="yantra_pics/yantra4.jpg"width="500"height="667"/>
 			<br>
-			<img src="yantra_pics/yantra5.jpg"/>
+			<img src="yantra_pics/yantra5.jpg"width="500"height="627"/>
 			<br>
-			<img src="yantra_pics/yantra6.jpg"/>
+			<img src="yantra_pics/yantra6.jpg"width="500"height="739"/>
 			<br>
-			<img src="yantra_pics/yantra7.jpg"/>
+			<img src="yantra_pics/yantra7.jpg"width="500"height="685"/>
 
 
 
