--- a/master_project_link.html
+++ b/master_project_link.html
@@ -3,11 +3,11 @@
 
 	<h1> Become The Master Images </h1>
 
-	<img src="images/master_project.jpg"/>
+	<img src="images/master_project.jpg"width="600"height="927"/>
 
-	<img src="images/master_class1.jpg" />
+	<img src="images/master_class1.jpg"width="550"height="733"/>
 
-	<img src="images/master_class2.jpg"
+	<img src="images/master_class2.jpg""550"height="733"/>
 
 		</body>
 	</html>
