--- a/master_project_link.html
+++ b/master_project_link.html
@@ -7,7 +7,7 @@
 
 	<img src="images/master_class1.jpg"width="550"height="733"/>
 
-	<img src="images/master_class2.jpg""550"height="733"/>
+	<img src="images/master_class2.jpg"width="550"height="733"/>
 
 		</body>
 	</html>
