--- a/pen_project_link.html
+++ b/pen_project_link.html
@@ -1,12 +1,11 @@
 
 		<h2> "The Pen is Mightier" </h2>
 
-		<img src="images/newyorkerlogo.jpg"/> \
+		<img src="images/newyorkerlogo.jpg"/>
 
-		<div>
-		</div>
+		<br>
 
 
-			<p4> Recently in my Intro to Web Design class we have been learning about what makes a good website. I have learned that although a website should be aesthetically pleasing, it should also be easy to navigate. That users of the website must be pleased with the design yet drawn to the content. 
+			<p> Recently in my Intro to Web Design class we have been learning about what makes a good website. I have learned that although a website should be aesthetically pleasing, it should also be easy to navigate. That users of the website must be pleased with the design yet drawn to the content. 
 				<br> My first impression of The New Yorker website is that it is very well organized and the layout is very effective. The links at the top are in white text on a black bar are the categories of each article while there are also links below the black bar on the grey bar in black text (less important links but still important enough to be at the top of the page). This helps the user navigate to a topic they are interested in. There is also a slide show in the middle of the page about the most recent articles from each category as well as a box to the right hand-side that shows the most popular, most emailed, this issue articles.
-				<br> The page is simple with a white background and black text. It is very easy to read with no distracting elements. I think that The New Yorker website is overall a good page with the direct information in the middle column and the advertisements on the right-hand column. </p4>
+				<br> The page is simple with a white background and black text. It is very easy to read with no distracting elements. <br>I think that The New Yorker website is not that bad of a page overall with the direct information in the middle column and the advertisements on the right-hand column. Although it might not be as aesthetically pleasing, it gets information to the user quickly. When I go on the site, I know that I am on a news site. </p>
