--- a/index.html
+++ b/index.html
@@ -73,7 +73,14 @@
 				For the project, I made a small booklet which explained the history of yantra tattoos and also has yantra symbols. <br> There is also a box with henna tools so that readers could create their own yantra tattoos.
 			</p>
 
+			<ul>
 
+				<h2> "Monograph: Yantra" </h2>
+
+				<li><a href="http://prezi.com/qdeb--sbsfd-/?utm_campaign=share&utm_medium=copy">"Love Letter: Forbidden Love"</a></li>
+
+			<p> For my love letter I did a presentation on tattoos. Tattoos to me is art on someone's body, although where I come from tattoos have a bad rep, I think they are beautiful art forms. 
+			</p>
 
 
 		<div>
