last last minute changes
changes

--- a/index.html
+++ b/index.html
@@ -75,9 +75,9 @@
 
 			<ul>
 
-				<h2> "Monograph: Yantra" </h2>
+				<h2> "Love Letter: Forbidden Love"" </h2>
 
-				<li><a href="http://prezi.com/qdeb--sbsfd-/?utm_campaign=share&utm_medium=copy">"Love Letter: Forbidden Love"</a></li>
+				<li><a href="http://prezi.com/qdeb--sbsfd-/?utm_campaign=share&utm_medium=copy">Prezi Link</a></li>
 
 			<p> For my love letter I did a presentation on tattoos. Tattoos to me is art on someone's body, although where I come from tattoos have a bad rep, I think they are beautiful art forms. 
 			</p>
